@@ -51,8 +51,6 @@ public:
     // Notifies host upon runtime feature being enabled/disabled.
     virtual void runtimeFeatureStateChanged(const WebString& feature, bool enabled) { }
 
-    WEBKIT_API static void sendMessageToFrontendOnIOThread(const WebDevToolsMessageData&);
-
     virtual WebCString injectedScriptSource() { return WebCString(); }
     virtual WebCString injectedScriptDispatcherSource() { return WebCString(); }
     virtual WebCString debuggerScriptSource() { return WebCString(); }
@@ -72,8 +70,5 @@ protected:
 };
 
 } // namespace WebKit
-
-// FIXME(40914): Remove after adding #include into devtools_agent_filter.cc
-#include "WebDevToolsMessageTransport.h"
 
 #endif
