@@ -2,6 +2,16 @@
 
         Reviewed by Pavel Feldman.
 
+        [Chromium] Clean up after removal of static WebDevToolsAgentClient::sendMessageToFrontendOnIOThread.
+
+        https://bugs.webkit.org/show_bug.cgi?id=40914
+
+        * public/WebDevToolsAgentClient.h:
+
+2010-06-22  Mikhail Naganov  <mnaganov@chromium.org>
+
+        Reviewed by Pavel Feldman.
+
         [Chromium] Add a sanity test for heap profiler.
 
         https://bugs.webkit.org/show_bug.cgi?id=40917
